# dipsum

./: Cargo.toml  README.md  lorem-ipsum.txt
src/: main.rs
