[package]
name = "dipsum"
description = "Your local placeholder text generator."
version = "0.1.0"
authors = ["MarrieMitsu"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/MarrieMitsu/dipsum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.4.0"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
