[package]
name = "dipsum"
description = "Your local placeholder text generator."
version = "0.1.1"
authors = ["MarrieMitsu"]
edition = "2024"
readme = "./README.md"
repository = "https://github.com/MarrieMitsu/dipsum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.6.0"
clap = { version = "4.5.44", features = ["derive"] }
lazy_static = "1.5.0"
rand = "0.9.2"
